--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "algorithms": "^0.10.0",
+    "datastructures-js": "^10.1.1",
+    "fibonacci-heap": "^0.0.4",
+    "mathjs": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
