--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "react-use": "^17.3.1",
-    "typescript": "^4.5.4",
-    "web-vitals": "^1.1.2"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "predeploy": "npm run build",
