--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-flow": "^7.22.5",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +20,7 @@
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "add": "^2.0.6",
     "algorithms": "^0.10.0",
     "datastructures-js": "^10.1.1",
     "mathjs": "^10.0.0",
@@ -23,7 +28,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "react-use": "^17.3.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "predeploy": "npm run build",
