--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mathjs": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-use": "^17.3.1",
     "typescript": "^4.5.4",
     "yarn": "^1.22.19"
