changed homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://marco444.github.io/dijkstra-s-dog",
+  "homepage": ".",
   "name": "dijkstra-s-dog",
   "version": "0.1.0",
   "private": false,
